--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pytube = "^15.0.0"
+flask = "^3.0.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
