--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.12"
 pytube = "^15.0.0"
 flask = "^3.0.2"
+flask-wtf = "^1.2.1"
+youtube-dl = "^2021.12.17"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
