--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 pytube = "^15.0.0"
 flask = "^3.0.2"
 flask-wtf = "^1.2.1"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
