--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytube = "^15.0.0"
 flask = "^3.0.2"
 flask-wtf = "^1.2.1"
 gunicorn = "^21.2.0"
+pydub = "^0.25.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
