--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -35,6 +35,7 @@ jobs:
       # uses: ClementWalter/poetry-action@845abd0cfcc6671c045a2f9df189360bb73e64c4
       uses: ClementWalter/poetry-action@v1
       with:
+        os: ubuntu-latest
         python-version: ${{ matrix.python-version }}
               
     - name: Test with pytest
