--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -30,14 +30,14 @@ jobs:
         python -m pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; 
         else; fi
-    - name: Poetry setup
+    - name: Setup Poetry
       # You may pin to the exact commit or the version.
-      # uses: ClementWalter/poetry-action@845abd0cfcc6671c045a2f9df189360bb73e64c4
-      uses: ClementWalter/poetry-action@v1
+      # uses: Gr1N/setup-poetry@15821dc8a61bc630db542ae4baf6a7c19a994844
+      uses: Gr1N/setup-poetry@v8
+    - uses: actions/cache@v2
       with:
-        os: ubuntu-latest
-        python-version: ${{ matrix.python-version }}
-              
+        path: ~/.cache/pypoetry/virtualenvs
+        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}    
     - name: Test with pytest
       run: |
         pytest
