--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -24,16 +24,15 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; 
-        else; fi
     - name: Setup Poetry
       # You may pin to the exact commit or the version.
       # uses: Gr1N/setup-poetry@15821dc8a61bc630db542ae4baf6a7c19a994844
       uses: Gr1N/setup-poetry@v8
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install pytest
+        poetry install --no-dev
     - uses: actions/cache@v2
       with:
         path: ~/.cache/pypoetry/virtualenvs
