--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -39,4 +39,4 @@ jobs:
         key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}    
     - name: Test with pytest
       run: |
-        pytest
+        pytest --cov-report=xml --cov=src
