--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -30,9 +30,7 @@ jobs:
       uses: Gr1N/setup-poetry@v8
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest
-        poetry install --no-dev
+        poetry install --only=TEST
     - uses: actions/cache@v2
       with:
         path: ~/.cache/pypoetry/virtualenvs
