--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pydub = "^0.25.1"
 mypy = "^1.8.0"
 ruff = "^0.2.1"
 black = "^24.1.1"
+[tool.poetry.group.test.dependencies]
 pytest = "^8.0.0"
 pytest-mock = "^3.12.0"
 pytest-cov = "^4.1.0"
