use poetry to run pytest

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -37,4 +37,4 @@ jobs:
         key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}    
     - name: Test with pytest
       run: |
-        pytest
+        poetry run pytest
