--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -34,7 +34,7 @@ jobs:
     - uses: actions/cache@v2
       with:
         path: ~/.cache/pypoetry/virtualenvs
-        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}    
+        key: ${{ runner.os }}-${{ matrix.python-version }}-poetry-${{ hashFiles('poetry.lock') }}    
     - name: Test with pytest
       run: |
-        poetry run pytest
+        poetry run pytest -cov-report=xml
