--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,8 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
-
+name: pytest
 on:
   push:
     branches: [ "main" ]
@@ -30,13 +29,11 @@ jobs:
       uses: Gr1N/setup-poetry@v8
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest
-        poetry install --no-dev
+        poetry install --only=main,test
     - uses: actions/cache@v2
       with:
         path: ~/.cache/pypoetry/virtualenvs
-        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}    
+        key: ${{ runner.os }}-${{ matrix.python-version }}-poetry-${{ hashFiles('poetry.lock') }}    
     - name: Test with pytest
       run: |
-        pytest
+        poetry run pytest -cov-report=xml
