--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -4,9 +4,13 @@
 name: pytest
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
+      - dev
   pull_request:
-    branches: [ "main" ]
+    branches: 
+      - main
+      - dev
 
 jobs:
   build:
