--- a/.gitignore
+++ b/.gitignore
@@ -159,8 +159,15 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# VScode
+.vscode/
+*.code-workspace
 
 #Downloaded data
 dev_download_folder/
 app/downloads/
 *.mp4
+*.mp3
+
+
+
