--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ flask-wtf = "^1.2.1"
 gunicorn = "^21.2.0"
 pydub = "^0.25.1"
 tinytag = "^1.10.1"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
